# learn-claude

./: random_notes.txt
backend/: pyproject.toml  requirements.txt
backend/market/: __init__.py  client.py  exceptions.py  interface.py  massive_client.py  models.py  simulator.py  sync.py
backend/tests/: test_market.py
planning/: MARKET_INTERFACE.md  MARKET_SIMULATOR.md  MASSIVE_API.md
