[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "market-data-backend"
version = "0.1.0"
description = "Market Data backend with Massive API interface, unified client, and GBM simulator"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
live = ["massive>=1.0"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["market*"]
